# estat-mcp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
keycloak/: realm-export.json
src/: auth.py  config.py  estat_client.py  jwt_auth.py  middleware.py  server.py
tests/: conftest.py  test_auth.py  test_estat_client.py  test_jwt_auth.py  test_middleware.py  test_server.py
